# sIm_edge_ai_app

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  RUNBOOK.md  analyze_levels.py  bench_common.sh  bench_cpp.sh  bench_python.sh  benchmark.sh  benchmark_analyze.py  docker-compose.yml  gen_test_frames.py  requirements-dev.txt  test_grpc_client.py
benchmark_results/: pipeline_levels_analysis.md
benchmark_results/cpp_20260225_223052/: config.txt  cpp_docker_stats.csv  cpp_latency.csv
benchmark_results/cpp_20260225_223901/: config.txt  cpp_docker_stats.csv  cpp_latency.csv
benchmark_results/python_20260225_224026/: config.txt  python_docker_stats.csv  python_latency.csv
camera_research/: WSL2_USB_CAMERA_GUIDE.md
data/: bench_l0.csv  bench_l1.csv  bench_l2.csv  bench_l3.csv  bench_l4.csv
device/: CMakeLists.txt  Dockerfile
device/hal/: file_frame_source.cpp  file_frame_source.h  i_frame_source.h  opencv_frame_source.cpp  opencv_frame_source.h
device/src/: grpc_client.cpp  grpc_client.h  inference.cpp  inference.h  labels.h  main.cpp  pipeline.cpp  pipeline.h  pipeline_l0.cpp  pipeline_l1.cpp  pipeline_l2.cpp  pipeline_l3.cpp  pipeline_slots.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  ring_buffer.h
docs/: 01_overview.md  02_architecture.md  03_cpp_pipeline_deep_dive.md  04_benchmark.md  05_setup_and_commands.md  06_code_walkthrough.md  ROADMAP.md
models/: download_model.sh  export_yolov8n.py
proto/: edge_ai.proto
python_device/: Dockerfile  main.py  requirements.txt
server/: Dockerfile  entrypoint.py  requirements.txt
server/app/: draw.py  grpc_server.py  main.py  state.py
tools/: Dockerfile.yolov8-export
